AirquipUAT/force-app/main/default/objects/Geotab_Integration_Config__mdt/Geotab_Integration_Config__mdt.object-meta.xml
<CustomObject>
    <description>Single Geotab integration settings record: credentials, enable/disable, and sync options.</description>
    <label>Geotab Integration Settings</label>
    <pluralLabel>Geotab Integration Settings</pluralLabel>
</CustomObject>