AirquipUAT/force-app/main/default/objects/Geotab_Integration_Config__mdt/fields/Create_Location_History__c.field-meta.xml
<CustomField>
    <fullName>Create_Location_History__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create Location History</label>
    <type>Checkbox</type>
</CustomField>