AirquipUAT/force-app/main/default/objects/Geotab_Integration_Config__mdt/fields/Database_Name__c.field-meta.xml
<CustomField>
    <fullName>Database_Name__c</fullName>
    <label>Geotab Database Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>