AirquipUAT/force-app/main/default/objects/Geotab_Integration_Config__mdt/fields/Device_Sync_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Device_Sync_Batch_Size__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Device Sync Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>