AirquipUAT/force-app/main/default/objects/Geotab_Integration_Config__mdt/fields/Device_Sync_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Device_Sync_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Device Sync Enabled</label>
    <type>Checkbox</type>
</CustomField>