AirquipUAT/force-app/main/default/objects/Geotab_Integration_Config__mdt/fields/Location_History_Interval_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Location_History_Interval_Minutes__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Minimum minutes between Technician Location history records per engineer.</description>
    <label>Location History Interval Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>