AirquipUAT/force-app/main/default/objects/Geotab_Integration_Config__mdt/fields/Sync_Interval_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Sync_Interval_Seconds__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Location sync cadence in seconds. Values under 60 run every minute; values above 60 must resolve to a minute cadence that evenly divides one hour.</description>
    <label>Sync Interval Seconds</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>